feat: basic function and struct of backend
